--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ideiasus",
+  "name": "meu-payload-cms",
   "version": "1.0.0",
   "scripts": {
     "build": "payload build",
@@ -8,11 +8,14 @@
     "dev": "payload dev"
   },
   "dependencies": {
-    "payload": "^2.0.0",
-    "@payloadcms/db-postgres": "^1.0.0",
-    "@payloadcms/bundler-webpack": "^1.0.0",
-    "@payloadcms/richtext-slate": "^1.0.0",
-    "express": "^4.18.0",
-    "dotenv": "^16.0.0"
+    "payload": "^2.30.2",
+    "@payloadcms/db-postgres": "^0.8.7",
+    "@payloadcms/bundler-webpack": "^1.0.7",
+    "@payloadcms/richtext-slate": "^1.5.2",
+    "express": "^4.19.2",
+    "dotenv": "^16.4.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
