--- a/package.json
+++ b/package.json
@@ -1,33 +1,21 @@
 {
   "name": "meu-payload-cms",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
-    "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
-    "payload": "cross-env NODE_OPTIONS=--no-deprecation payload"
+    "build": "payload build",
+    "dev": "payload dev",
+    "start": "node server.js",
+    "payload": "payload"
   },
   "dependencies": {
-    "@payloadcms/bundler-webpack": "^1.0.7",
-    "@payloadcms/db-postgres": "^0.8.7",
-    "@payloadcms/richtext-slate": "^1.5.2",
-    "cross-env": "^7.0.3",
-    "next": "15.0.3",
     "payload": "^2.30.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.14.9",
-    "@types/react": "npm:types-react@19.0.0",
-    "@types/react-dom": "npm:types-react-dom@19.0.0",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "typescript": "5.6.3"
+    "@payloadcms/db-postgres": "^0.8.7",
+    "@payloadcms/bundler-webpack": "^1.0.7",
+    "@payloadcms/richtext-slate": "^1.5.2",
+    "express": "^4.19.2",
+    "dotenv": "^16.4.5"
   },
   "engines": {
-    "node": ">=18.20.4"
+    "node": ">=18.0.0"
   }
 }
